feat: add chat page and streaming

--- a/OpenClaw/src/OpenClaw.Api/wwwroot/index.html
+++ b/OpenClaw/src/OpenClaw.Api/wwwroot/index.html
@@ -45,6 +45,17 @@
                     <p>NATS EventController testing and debugging tool</p>
                 </a>
 
+                <a href="/openclaw/index.html" class="card" target="_blank">
+                    <div class="card-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+                        </svg>
+                    </div>
+                    <h2>OpenClaw</h2>
+                    <p>A 24/7 AI agent rewritten in .NET</p>
+                </a>
+
                 <a href="/wiki/index.html" class="card" target="_blank">
                     <div class="card-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
