feat: add conversation persistence layer and Grafana observability dashboard

--- a/OpenClaw/src/OpenClaw.Api/wwwroot/openclaw/index.html
+++ b/OpenClaw/src/OpenClaw.Api/wwwroot/openclaw/index.html
@@ -19,10 +19,16 @@
         <nav class="sidebar">
             <div class="sidebar-header">
                 <h1>OpenClaw.NET</h1>
-                <button id="theme-toggle" class="theme-toggle" title="Toggle theme">
-                    <span class="icon-sun">☀️</span>
-                    <span class="icon-moon">🌙</span>
-                </button>
+                <div class="header-buttons">
+                    <button id="theme-toggle" class="theme-toggle" title="Toggle theme">
+                        <span class="icon-sun">☀️</span>
+                        <span class="icon-moon">🌙</span>
+                    </button>
+                    <button id="sidebar-toggle" class="sidebar-toggle" title="Toggle sidebar">
+                        <span class="icon-collapse">◀</span>
+                        <span class="icon-expand">▶</span>
+                    </button>
+                </div>
             </div>
             <ul>
                 <li><a href="#chat" class="nav-link active">Chat</a></li>
