feat: add weather skill, generic skill lookup, and collapsed sidebar tooltips

--- a/OpenClaw/src/OpenClaw.Api/wwwroot/openclaw/index.html
+++ b/OpenClaw/src/OpenClaw.Api/wwwroot/openclaw/index.html
@@ -20,12 +20,12 @@
         <nav class="sidebar">
             <!-- Sidebar Header -->
             <div class="sidebar-header">
-                <button id="sidebar-toggle" class="icon-btn sidebar-toggle-btn" title="Toggle sidebar">
+                <button id="sidebar-toggle" class="icon-btn sidebar-toggle-btn" title="Toggle sidebar" data-tooltip="Toggle sidebar">
                     <svg class="icon-menu" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M3 12h18M3 6h18M3 18h18"/>
                     </svg>
                 </button>
-                <button id="new-chat-btn" class="icon-btn new-chat-btn" title="New Chat">
+                <button id="new-chat-btn" class="icon-btn new-chat-btn" title="New Chat" data-tooltip="New Chat">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M12 5v14M5 12h14"/>
                     </svg>
@@ -43,7 +43,7 @@
             <!-- Profile Section (Bottom) -->
             <div class="sidebar-footer">
                 <div class="profile-section">
-                    <button id="profile-btn" class="profile-btn">
+                    <button id="profile-btn" class="profile-btn" data-tooltip="Settings">
                         <div class="profile-avatar">U</div>
                         <span class="profile-name">User</span>
                         <svg class="profile-chevron" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
