--- a/OpenClaw/src/OpenClaw.Api/wwwroot/openclaw/index.html
+++ b/OpenClaw/src/OpenClaw.Api/wwwroot/openclaw/index.html
@@ -66,6 +66,15 @@
                             </svg>
                             <span>Settings</span>
                         </button>
+                        <div class="dropdown-divider"></div>
+                        <button id="logout-btn" class="dropdown-item logout-item">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M9 21H5a2 2 0 01-2-2V5a2 2 0 012-2h4"/>
+                                <polyline points="16 17 21 12 16 7"/>
+                                <line x1="21" y1="12" x2="9" y2="12"/>
+                            </svg>
+                            <span>Logout</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -186,6 +195,7 @@
         </div>
     </div>
 
+    <script src="/js/auth.js"></script>
     <script src="/openclaw/app.js"></script>
 </body>
 </html>
